Remove unnecessary java compiler imports in pom.xml